# zephyrus-acr

./: .clangd  AGENTS.md  CMakeLists.txt  version.cpp.in
asset/: CMakeLists.txt
asset/ui/main-menu/: main-menu.rml
cmake/: dependencies.cmake
include/zephyrus/: log.hpp  version.hpp  zephyrus.hpp
include/zephyrus/abstract/: manager.hpp
include/zephyrus/assets/: ui.hpp
include/zephyrus/log/: logging_manager.hpp
include/zephyrus/rmlui/: cmrc_file_interface.hpp  rmlui.hpp  rmlui_manager.hpp
src/: zephyrus_acr.cpp  zephyrus_standalone.cpp
src/zephyrus/: zephyrus.cpp  zephyrus_acr.cpp  zephyrus_standalone.cpp
src/zephyrus/log/: logging_manager.cpp
src/zephyrus/rmlui/: cmrc_file_interface.cpp  rmlui_manager.cpp
test/: CMakeLists.txt
test/asset/dir/deep/: leaf.txt
test/zephyrus/rmlui/: cmrc_file_interface_test.cpp  test_cmrc_file_interface.cpp
